Thomas Hubbard First Commit

--- a/TreasureStockEngine/TreasureStockEngine.csproj
+++ b/TreasureStockEngine/TreasureStockEngine.csproj
@@ -42,7 +42,12 @@
   <ItemGroup>
     <Compile Include="Quote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stock.cs" />
     <Compile Include="YahooFinanceQuoteEngine.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="StockData\StockList.txt" />
+    <Content Include="StockData\StockListReduced.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
