--- a/TreasureStock/TreasureStock.csproj
+++ b/TreasureStock/TreasureStock.csproj
@@ -20,6 +20,11 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +45,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -58,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="PercentageRating.aspx" />
+    <Content Include="QuotesDemo.aspx" />
     <Content Include="Styles.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -83,6 +90,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="QuotesDemo.aspx.cs">
+      <DependentUpon>QuotesDemo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="QuotesDemo.aspx.designer.cs">
+      <DependentUpon>QuotesDemo.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
